--- a/package.json
+++ b/package.json
@@ -6,8 +6,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.8",
+        "@vitejs/plugin-vue": "^5.0.2",
+        "@vue-leaflet/vue-leaflet": "^0.10.1",
+        "@vue/tsconfig": "^0.5.1",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^1.0.0",
+        "leaflet": "^1.9.4",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0",
+        "typescript": "^5.3.3",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.14"
     }
 }
