--- a/.github/workflows/ci-linode.yml
+++ b/.github/workflows/ci-linode.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-docker:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Build
