--- a/.github/workflows/ci-linode.yml
+++ b/.github/workflows/ci-linode.yml
@@ -55,7 +55,7 @@ jobs:
               then echo "No container found. Starting portland-finder container..."; \
             else docker stop portland-finder && docker rm portland-finder; \
             fi \
-            && docker run -d \S
+            && docker run -d \
             -p "${envArray[0]}":8000 \
             --name portland-finder \
             --restart always \
