--- a/.github/workflows/ci-linode.yml
+++ b/.github/workflows/ci-linode.yml
@@ -42,15 +42,16 @@ jobs:
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           APP_KEY: ${{ secrets.APP_KEY }}
+          APP_URL: ${{ secrets.APP_URL }}
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER_NAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          envs: HOST_PORT,DOCKERHUB_USERNAME,DB_HOST,DB_PORT,DB_DATABASE,DB_USERNAME,DB_PASSWORD,APP_KEY
+          envs: HOST_PORT,DOCKERHUB_USERNAME,DB_HOST,DB_PORT,DB_DATABASE,DB_USERNAME,DB_PASSWORD,APP_KEY,APP_URL
           script: |
-            export envArray=( $HOST_PORT $DOCKERHUB_USERNAME $DB_HOST $DB_PORT $DB_DATABASE $DB_USERNAME $DB_PASSWORD $APP_KEY) \
+            export envArray=( $HOST_PORT $DOCKERHUB_USERNAME $DB_HOST $DB_PORT $DB_DATABASE $DB_USERNAME $DB_PASSWORD $APP_KEY $APP_URL ) \
             && docker pull ${envArray[1]}/portland-finder \
             && if [[ -z $(docker container ls -a | grep "portland-finder") ]]; \
               then echo "No container found. Starting portland-finder container..."; \
@@ -66,6 +67,7 @@ jobs:
             -e DB_USERNAME=${envArray[5]} \
             -e DB_PASSWORD=${envArray[6]} \
             -e $APP_KEY=${envArray[7]} \
+            -e APP_URL=${envArray[8]} \
             "${envArray[1]}"/portland-finder \
             && exit \
             && exit 0;
