--- a/.github/workflows/ci-linode.yml
+++ b/.github/workflows/ci-linode.yml
@@ -43,15 +43,16 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           APP_KEY: ${{ secrets.APP_KEY }}
           APP_URL: ${{ secrets.APP_URL }}
+          APP_DEBUG: ${{ secrets.APP_DEBUG }}
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER_NAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          envs: HOST_PORT,DOCKERHUB_USERNAME,DB_HOST,DB_PORT,DB_DATABASE,DB_USERNAME,DB_PASSWORD,APP_KEY,APP_URL
+          envs: HOST_PORT,DOCKERHUB_USERNAME,DB_HOST,DB_PORT,DB_DATABASE,DB_USERNAME,DB_PASSWORD,APP_KEY,APP_URL,APP_DEBUG
           script: |
-            export envArray=( $HOST_PORT $DOCKERHUB_USERNAME $DB_HOST $DB_PORT $DB_DATABASE $DB_USERNAME $DB_PASSWORD $APP_KEY $APP_URL ) \
+            export envArray=( $HOST_PORT $DOCKERHUB_USERNAME $DB_HOST $DB_PORT $DB_DATABASE $DB_USERNAME $DB_PASSWORD $APP_KEY $APP_URL $APP_DEBUG ) \
             && docker pull ${envArray[1]}/portland-finder \
             && if [[ -z $(docker container ls -a | grep "portland-finder") ]]; \
               then echo "No container found. Starting portland-finder container..."; \
@@ -68,6 +69,7 @@ jobs:
             -e DB_PASSWORD=${envArray[6]} \
             -e $APP_KEY=${envArray[7]} \
             -e APP_URL=${envArray[8]} \
+            -e APP_DEBUG=${envArray[9]} \
             "${envArray[1]}"/portland-finder \
             && exit \
             && exit 0;
