--- a/.github/workflows/ci-linode.yml
+++ b/.github/workflows/ci-linode.yml
@@ -69,7 +69,7 @@ jobs:
             -e DB_PASSWORD=${envArray[6]} \
             -e APP_KEY=${envArray[7]} \
             -e APP_URL=${envArray[8]} \
-            -e APP_DEBUG=${envArray[9]} \
+            -e ASSET_URL=${envArray[8]} \
             "${envArray[1]}"/portland-finder \
             && exit \
             && exit 0;
