--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - test
-  pull_request:
-  schedule:
-    - cron: '0 0 * * *'
+  # pull_request:
+  # schedule:
+  #   - cron: '0 0 * * *'
 
 permissions:
   contents: read
